# 3dsticker

./: CMakeLists.txt  Mesh.h  Model.h  Shader.h  constant.h  estimate.cpp  estimate.hpp  main.cpp  setup_gl.cpp  setup_gl.h
object/: bag.blend  glass.blend  glass.mtl  head.blend  head.mtl  household.rar  nice.blend  nice.blend1  nice.mtl  paperbag.mtl
shader/: head.frag  head.vert  mesh.frag  mesh.vert  sticker.frag  sticker.vert  triangles.frag
